--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+.terraform/
+terraform.tfstate
+terraform.tfstate.backup
+terraform.tfvars
