--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Local .terraform directories
 **/.terraform/*
-**/terraform.tfstate.backup
+# Backup files
+*.bak
+# logs
+*.log
 # .tfstate files
 *.tfstate
 *.tfstate.*
@@ -33,6 +36,6 @@ override.tf.json
 .terraformrc
 terraform.rc
 .terraform/
-terraform.tfstate
-terraform.tfstate.backup*
-terraform.tfvars
+*.tfstate
+*.tfstate.backup
+*.tfstate.lock.info
