--- a/modules/grafana/datasources.yml
+++ b/modules/grafana/datasources.yml
@@ -2,14 +2,13 @@
   "apiVersion": 1,
   "datasources": [
     {
+      "access": "proxy",
+      "editable": true,
       "name": "prometheus",
-      "type": "prometheus",
-      "access": "direct",
       "orgId": 1,
+      "type": "prometheus",
       "url": "http://prometheus-service.monitoring.svc:8080",
-      "isDefault": true,
-      "version": 1,
-      "editable": false
+      "version": 1
     }
   ]
 }
