--- a/modules/prometheus/prometheus.yml
+++ b/modules/prometheus/prometheus.yml
@@ -10,6 +10,13 @@ alerting:
     - targets:
       - alertmanager.monitoring.svc:9093
 scrape_configs:
+- job_name: 'node-exporter'
+  kubernetes_sd_configs:
+    - role: endpoints
+  relabel_configs:
+  - source_labels: [__meta_kubernetes_endpoints_name]
+    regex: 'node-exporter'
+    action: keep
 - job_name: kubernetes-apiservers
   kubernetes_sd_configs:
   - role: endpoints
