--- a/.gitignore
+++ b/.gitignore
@@ -11,14 +11,16 @@
 # Crash log files
 crash.log
 crash.*.log
-
+.terraform.lock.hcl
+kubeconfig
+terraform.tfstate
 # Exclude all .tfvars files, which are likely to contain sensitive data, such as
 # password, private keys, and other secrets. These should not be part of version 
 # control as they are data points which are potentially sensitive and subject 
 # to change depending on the environment.
 *.tfvars
 *.tfvars.json
-
+modules/grafana/grafana.ini
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
 override.tf
